button fix on mobile view

--- a/blocks/partner-with-us/partner-with-us.css
+++ b/blocks/partner-with-us/partner-with-us.css
@@ -28,12 +28,10 @@
     display: flex;
 }
 .partner-with-us .row{
-    /* display: flex; */
     flex-direction: column;
 }
 @media (width >= 900px) {
     .partner-with-us .row{
-        /* display: flex; */
         flex-direction: row;
         justify-content: space-between;
         margin-bottom: 65px;
@@ -74,6 +72,7 @@
     margin: 0px;
     text-align: center;
 }
+
 /* Launching Technical Transformations Section*/
 .launching-technical-transformations{
     display: none;
@@ -81,9 +80,6 @@
  .creating-human-connections{
      display: none;
  }
- /* .transformations-button{
-     cursor: pointer; 
- } */
  .connections-button{
      cursor: pointer;
  }
@@ -119,40 +115,8 @@
     height: 700px;
 }
 
-@media (width >= 900px) {
-}
-/* .sub-title div p:nth-child(1){
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 16px 24px;
-    gap: 4px;
-    height: 40px;
-    border-radius: 12px 0px 0px 12px;
-    flex: none;
-    order: 0;
-    flex-grow: 1;
-    margin: 0px -1px;
-    border: 1px solid #FFFFFF;
-} */
-
-/* .sub-title div p:nth-child(2){
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 16px 24px;
-    gap: 4px;
-    width: 340px;
-    height: 40px;
-    border-radius: 0px 12px 12px 0px;
-    flex: none;
-    order: 1;
-    flex-grow: 1;
-    border: 1px solid #FFFFFF;
-} */
 .transformations-button-inactive{
+    font-size: small;
     cursor: pointer; 
     display: flex;
     flex-direction: row;
@@ -160,15 +124,16 @@
     align-items: center;
     padding: 16px 24px;
     gap: 4px;
-    height: 40px;
     border-radius: 12px 0px 0px 12px;
     flex: none;
     order: 0;
     flex-grow: 1;
     margin: 0px -1px;
     border: 1px solid #FFFFFF;
+    width: 50%;
 }
 .connections-button-inactive{
+    font-size: small;
     cursor: pointer;
     display: flex;
     flex-direction: row;
@@ -176,16 +141,15 @@
     align-items: center;
     padding: 16px 24px;
     gap: 4px;
-    width: 340px;
-    height: 40px;
+    width: 50%;
     border-radius: 0px 12px 12px 0px;
     flex: none;
     order: 1;
     flex-grow: 1;
     border: 1px solid #FFFFFF;
 }
-
 .transformations-button-active{
+    font-size: small;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -198,14 +162,14 @@
     order: 0;
     flex-grow: 1;
     margin: 0px -1px;
-    /* border: 1px solid #FFFFFF; */
-
     background: white;
     color: black;
     border: 3px solid var(--cx-green);
     z-index: 2;
+    width: 50%;
 }
 .connections-button-active{
+    font-size: small;
     cursor: pointer;
     display: flex;
     flex-direction: row;
@@ -219,10 +183,83 @@
     flex: none;
     order: 1;
     flex-grow: 1;
-    /* border: 1px solid #FFFFFF; */
-
+    
     background: white;
     color: black;
     border: 3px solid var(--cx-green);
     z-index: 2;
+    width: 50%;
+}
+
+@media (width >= 900px) {
+    .transformations-button-inactive{
+        cursor: pointer; 
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 16px 24px;
+        gap: 4px;
+        height: 40px;
+        border-radius: 12px 0px 0px 12px;
+        flex: none;
+        order: 0;
+        flex-grow: 1;
+        margin: 0px -1px;
+        border: 1px solid #FFFFFF;
+    }
+    .connections-button-inactive{
+        cursor: pointer;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 16px 24px;
+        gap: 4px;
+        width: 340px;
+        height: 40px;
+        border-radius: 0px 12px 12px 0px;
+        flex: none;
+        order: 1;
+        flex-grow: 1;
+        border: 1px solid #FFFFFF;
+    }
+    .transformations-button-active{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 16px 24px;
+        gap: 4px;
+        height: 40px;
+        border-radius: 12px 0px 0px 12px;
+        flex: none;
+        order: 0;
+        flex-grow: 1;
+        margin: 0px -1px;
+    
+        background: white;
+        color: black;
+        border: 3px solid var(--cx-green);
+        z-index: 2;
+    }
+    .connections-button-active{
+        cursor: pointer;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 16px 24px;
+        gap: 4px;
+        width: 340px;
+        height: 40px;
+        border-radius: 0px 12px 12px 0px;
+        flex: none;
+        order: 1;
+        flex-grow: 1;
+        background: white;
+        color: black;
+        border: 3px solid var(--cx-green);
+        z-index: 2;
+    }
 }
